logs/django-dockit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_dockit-0.0.13.egg-info'...
Listing './lib/python3.5/site-packages/dockit'...
Listing './lib/python3.5/site-packages/dockit/admin'...
Compiling './lib/python3.5/site-packages/dockit/admin/documentadmin.py'...
***   File "./lib/python3.5/site-packages/dockit/admin/documentadmin.py", line 389
    print 'no field', dotpath, obj
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dockit/auth.py'...
***   File "./lib/python3.5/site-packages/dockit/auth.py", line 55
    print "Adding permission '%s'" % p
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dockit/backends'...
Listing './lib/python3.5/site-packages/dockit/backends/djangodocument'...
Listing './lib/python3.5/site-packages/dockit/backends/djangodocument/migrations'...
Compiling './lib/python3.5/site-packages/dockit/backends/djangodocument/tests.py'...
***   File "./lib/python3.5/site-packages/dockit/backends/djangodocument/tests.py", line 79
    print 'Registered:', queryset.global_hash()
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockit/backends/mongo'...
Listing './lib/python3.5/site-packages/dockit/core'...
Listing './lib/python3.5/site-packages/dockit/core/serializers'...
Compiling './lib/python3.5/site-packages/dockit/core/serializers/base.py'...
***   File "./lib/python3.5/site-packages/dockit/core/serializers/base.py", line 132
    print 'Replacing id: %s\t natural key: %s' % (pk_value, self.natural_key)
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockit/forms'...
Compiling './lib/python3.5/site-packages/dockit/forms/forms.py'...
***   File "./lib/python3.5/site-packages/dockit/forms/forms.py", line 276
    except ValidationError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockit/schema'...
Compiling './lib/python3.5/site-packages/dockit/schema/fields.py'...
***   File "./lib/python3.5/site-packages/dockit/schema/fields.py", line 223
    except ValidationError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockit/schema/manager.py'...
***   File "./lib/python3.5/site-packages/dockit/schema/manager.py", line 72
    except MultipleObjectsReturned, error:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockit/schema/schema.py'...
***   File "./lib/python3.5/site-packages/dockit/schema/schema.py", line 149
    print name, self._meta.fields[name], entry
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dockit/static'...
Listing './lib/python3.5/site-packages/dockit/static/admin'...
Listing './lib/python3.5/site-packages/dockit/static/admin/css'...
Listing './lib/python3.5/site-packages/dockit/static/admin/js'...
Listing './lib/python3.5/site-packages/dockit/templates'...
Listing './lib/python3.5/site-packages/dockit/templates/admin'...
Listing './lib/python3.5/site-packages/dockit/tests'...
Listing './lib/python3.5/site-packages/dockit/tests/admin'...
Listing './lib/python3.5/site-packages/dockit/tests/backends'...
Listing './lib/python3.5/site-packages/dockit/tests/forms'...
Listing './lib/python3.5/site-packages/dockit/tests/schema'...
Listing './lib/python3.5/site-packages/dockit/tests/serializers'...
Listing './lib/python3.5/site-packages/dockit/views'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
